--- a/index.yaml
+++ b/index.yaml
@@ -1,11 +1,10 @@
 swagger: '2.0'
 info:
   version: '1.0.0'
-  title: Centify API
-  description: >
-    Test description.
-host: centify.com
-basePath: /api.centify.com/
+  title: "Centify API"
+  description: "Test description."
+host: "centify.com"
+basePath: "/api.centify.com/"
 schemes:
   - http
 consumes:
@@ -13,26 +12,23 @@ consumes:
 produces:
   - application/json
 paths:
-  /v:version/signup:
+  "/v:version/signup":
     post:
-      tags:
-        - Signup
-      summary: Signup to Centify
-      description: >
-        Create a new Centify account.
+      summary: "Signup to Centify"
+      description: "Create a new Centify account."
       produces:
         - application/json
 	- application/xml
 	- text/xml
 	- text/html
       parameters:
-        - name: FirstName
+        - name: "FirstName"
 	  in: query
 	  required: true
 	  type: string
       responses:
         '200':
-	  description: Created
+	  description: "Created"
 	  schema:
 	    properties:
 	      Location:
